# superdarn-sounder

./: pyproject.toml
docs/: OBSERVING.md  REQUIREMENTS.md
scripts/: install.sh
src/superdarn_sounder/: cli.py
src/superdarn_sounder/core/: sequence_match.py  stream.py  vt_realtime.py
tests/: test_stream.py  test_vt_realtime.py
