[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "superdarn-sounder"
version = "0.1.0"
description = "Passive SuperDARN coherent-radar monitor (detection / identification)"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michael Hauan", email = "mjh@hauan.org"},
]
dependencies = [
    # ≥3.11 added low_edge/high_edge to ensure_channel (wideband IQ without the
    # iq preset's ±5 kHz audio filter); ≥3.14 added RadiodControl(client_id=).
    "ka9q-python>=3.14.0",
    "numpy>=1.24.0",
    "hamsci-dsp>=0.1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
# rawACF ground-truth validation (scripts/validate_against_rawacf.py) only.
validate = [
    "pydarnio>=1.3",
]
# `detect-scan --track <radar>` — follow a radar's live frequency from the VT
# real-time feed (core/vt_realtime.py). Not needed by the daemon.
track = [
    "python-socketio[client]>=5",
]

[project.scripts]
superdarn-sounder = "superdarn_sounder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
superdarn_sounder = ["../data/radars.toml", "../data/pulse_tables.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
# editable=true so a `git pull` of a sibling propagates to this venv without a
# reinstall — the suite-wide "one source tree, many editable consumers"
# convention (see sigmond/CLAUDE.md "Fleet upgrade pattern").
ka9q-python = { path = "../ka9q-python", editable = true }
hamsci-dsp = { path = "../hamsci-dsp", editable = true }
